# amazon-price-scraper

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  scrape.rs
