[package]
name = "amazon-price-scraper"
version = "0.5.0"
authors = []
edition = "2018"

[dependencies]
scraper = "0.12.0"
prettytable-rs = "0.8.0"
textwrap = "0.12.1"
url = "2.2.0"
anyhow = "1"
async-std = {version = "1", features = ["attributes", "tokio03", "tokio02"]}
futures = "0.3.8"
cdrs-tokio = "1"
chrono = "0.4"
reqwest = { version = "0.10.9", features = ["brotli", "gzip", "native-tls", "cookies"] }
bollard = "0.9.0"
simplelog = "0.8.0"
log = "0.4.11"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true
# lto = true