[package]
name = "amazon-price-scraper"
version = "0.5.0"
authors = []
edition = "2018"

[dependencies]
scraper = "0.12.0"
prettytable-rs = "0.8.0"
textwrap = "0.12.1"
url = "2.2.0"
anyhow = "1"
chrono = "0.4"
simplelog = "0.9.0"
log = "0.4.14"
clap = "2"
rusqlite = { version = "0.24", features=["bundled"] }
plotters = "0.3.0"
rust_decimal = "1"
ureq = { version = "2", features = ["charset"] }

[dependencies.http-types]
version = "2"
default-features = false